set(INCLUDE_DIRS
    ${REVBAYES_DIR}/core
    ${REVBAYES_DIR}/core/math
    ${REVBAYES_DIR}/core/math/integration
    ${REVBAYES_DIR}/core/math/distributions
    ${REVBAYES_DIR}/core/monitors
    ${REVBAYES_DIR}/core/monitors/characterhistory
    ${REVBAYES_DIR}/core/io
    ${REVBAYES_DIR}/core/phylogenetics
    ${REVBAYES_DIR}/core/moves
    ${REVBAYES_DIR}/core/moves/mixture
    ${REVBAYES_DIR}/core/moves/characterhistory
    ${REVBAYES_DIR}/core/moves/compound
    ${REVBAYES_DIR}/core/moves/simple
    ${REVBAYES_DIR}/core/moves/trees
    ${REVBAYES_DIR}/core/moves/trees/nodeage
    ${REVBAYES_DIR}/core/moves/trees/compound
    ${REVBAYES_DIR}/core/moves/trees/topology
    ${REVBAYES_DIR}/core/ncl
    ${REVBAYES_DIR}/core/functions
    ${REVBAYES_DIR}/core/functions/discrete
    ${REVBAYES_DIR}/core/functions/discrete/univariate
    ${REVBAYES_DIR}/core/functions/builtin
    ${REVBAYES_DIR}/core/functions/distribution
    ${REVBAYES_DIR}/core/functions/continuous
    ${REVBAYES_DIR}/core/functions/continuous/bivariate
    ${REVBAYES_DIR}/core/functions/continuous/univariate
    ${REVBAYES_DIR}/core/functions/phylogenetics
    ${REVBAYES_DIR}/core/utils
    ${REVBAYES_DIR}/core/dag
    ${REVBAYES_DIR}/core/dag/StochasticNodes
    ${REVBAYES_DIR}/core/dag/DeterministicNodes
    ${REVBAYES_DIR}/core/statistics
    ${REVBAYES_DIR}/core/statistics/mixture
    ${REVBAYES_DIR}/core/statistics/tree
    ${REVBAYES_DIR}/core/datatypes
    ${REVBAYES_DIR}/core/datatypes/characterhistory
    ${REVBAYES_DIR}/core/datatypes/math
    ${REVBAYES_DIR}/core/datatypes/character
    ${REVBAYES_DIR}/core/datatypes/phylogenetics
    ${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix
    ${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap
    ${REVBAYES_DIR}/core/datatypes/trees
    ${REVBAYES_DIR}/core/analysis
    ${REVBAYES_DIR}/core/analysis/mcmc
    ${REVBAYES_DIR}/core/analysis/mcmc/output
    ${REVBAYES_DIR}/core/analysis/mcmc/convergence
    ${REVBAYES_DIR}/core/distributions
    ${REVBAYES_DIR}/core/distributions/characterhistory
    ${REVBAYES_DIR}/core/distributions/math
    ${REVBAYES_DIR}/core/distributions/phylogenetics
    ${REVBAYES_DIR}/core/distributions/phylogenetics/tree
    ${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath
    ${REVBAYES_DIR}/core/distributions/phylogenetics/substitution
)
set(RBCORE_INCLUDES ${INCLUDE_DIRS} PARENT_SCOPE)
include_directories(${INCLUDE_DIRS})
set(CORE_FILES
${REVBAYES_DIR}/core
${REVBAYES_DIR}/core/math
${REVBAYES_DIR}/core/math/EigenSystem.h
${REVBAYES_DIR}/core/math/RandomNumberGenerator.cpp
${REVBAYES_DIR}/core/math/RbMathHelper.h
${REVBAYES_DIR}/core/math/RbMathGaussianElimination.h
${REVBAYES_DIR}/core/math/RbMathHelper.cpp
${REVBAYES_DIR}/core/math/RbMathFunctions.h
${REVBAYES_DIR}/core/math/RandomNumberFactory.cpp
${REVBAYES_DIR}/core/math/RbMathVector.h
${REVBAYES_DIR}/core/math/RbMathMatrix.h
${REVBAYES_DIR}/core/math/RbMathVector.cpp
${REVBAYES_DIR}/core/math/RbStatisticsHelper.h
${REVBAYES_DIR}/core/math/RbMathCombinatorialFunctions.h
${REVBAYES_DIR}/core/math/RbMathLogic.cpp
${REVBAYES_DIR}/core/math/RandomNumberGenerator.h
${REVBAYES_DIR}/core/math/EigenSystem.cpp
${REVBAYES_DIR}/core/math/RbMathCombinatorialFunctions.cpp
${REVBAYES_DIR}/core/math/RbMathMatrix.cpp
${REVBAYES_DIR}/core/math/RbMathFunctions.cpp
${REVBAYES_DIR}/core/math/RandomNumberFactory.h
#${REVBAYES_DIR}/core/math/integration
#${REVBAYES_DIR}/core/math/integration/GslIntegrator.h
#${REVBAYES_DIR}/core/math/integration/TrapezoidalRule.cpp
#${REVBAYES_DIR}/core/math/integration/SimpsonsRule.h
#${REVBAYES_DIR}/core/math/integration/TrapezoidalRule.h
#${REVBAYES_DIR}/core/math/integration/GslIntegrator.cpp
#${REVBAYES_DIR}/core/math/integration/SimpsonsRule.cpp
#${REVBAYES_DIR}/core/math/integration/NumericalIntegration.h
${REVBAYES_DIR}/core/math/RbStatisticsHelper.cpp
${REVBAYES_DIR}/core/math/distributions
#${REVBAYES_DIR}/core/math/distributions/DistributionCauchy.h
#${REVBAYES_DIR}/core/math/distributions/DistributionF.h
#${REVBAYES_DIR}/core/math/distributions/DistributionWishart.h
#${REVBAYES_DIR}/core/math/distributions/DistributionLognormal.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionDirichlet.h
#${REVBAYES_DIR}/core/math/distributions/DistributionInverseGamma.h
#${REVBAYES_DIR}/core/math/distributions/DistributionInverseGamma.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionBeta.h
#${REVBAYES_DIR}/core/math/distributions/DistributionMultinomial.h
#${REVBAYES_DIR}/core/math/distributions/DistributionPoisson.h
${REVBAYES_DIR}/core/math/distributions/DistributionDirichlet.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionChisq.h
#${REVBAYES_DIR}/core/math/distributions/DistributionLognormal.h
${REVBAYES_DIR}/core/math/distributions/DistributionUniform.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionGamma.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionGeometric.h
#${REVBAYES_DIR}/core/math/distributions/DistributionMultivariateNormal.h
${REVBAYES_DIR}/core/math/distributions/DistributionUniform.h
#${REVBAYES_DIR}/core/math/distributions/DistributionMultinomial.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionPoisson.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionBinomial.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionLogistic.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionBeta.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionF.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionLogistic.h
#${REVBAYES_DIR}/core/math/distributions/DistributionChisq.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionGeometric.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionWishart.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionNormal.h
${REVBAYES_DIR}/core/math/distributions/DistributionExponential.h
${REVBAYES_DIR}/core/math/distributions/DistributionNormal.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionBinomial.h
${REVBAYES_DIR}/core/math/distributions/DistributionGamma.h
#${REVBAYES_DIR}/core/math/distributions/DistributionCauchy.cpp
#${REVBAYES_DIR}/core/math/distributions/DistributionMultivariateNormal.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionExponential.cpp
${REVBAYES_DIR}/core/math/RbMathLogic.h
${REVBAYES_DIR}/core/math/RbMathGaussianElimination.cpp
${REVBAYES_DIR}/core/monitors
${REVBAYES_DIR}/core/monitors/ScreenMonitor.h
#${REVBAYES_DIR}/core/monitors/ModelMonitor.cpp
#${REVBAYES_DIR}/core/monitors/PathSampleMonitor.cpp
${REVBAYES_DIR}/core/monitors/FileMonitor.h
#${REVBAYES_DIR}/core/monitors/PathSampleMonitor.h
${REVBAYES_DIR}/core/monitors/Monitor.h
${REVBAYES_DIR}/core/monitors/FileMonitor.cpp
${REVBAYES_DIR}/core/monitors/Monitor.cpp
${REVBAYES_DIR}/core/monitors/ScreenMonitor.cpp
#${REVBAYES_DIR}/core/monitors/ModelMonitor.h
#${REVBAYES_DIR}/core/monitors/ExtendedNewickTreeMonitor.cpp
${REVBAYES_DIR}/core/monitors/ExtendedNewickTreeMonitor.h
${REVBAYES_DIR}/core/io
${REVBAYES_DIR}/core/io/TaxonReader.h
${REVBAYES_DIR}/core/io/RbErrorStream.h
${REVBAYES_DIR}/core/io/NclReader.cpp
#${REVBAYES_DIR}/core/io/FastaWriter.cpp
${REVBAYES_DIR}/core/io/NewickTreeReader.cpp
${REVBAYES_DIR}/core/io/PopulationDataReader.h
${REVBAYES_DIR}/core/io/NewickTreeReader.h
${REVBAYES_DIR}/core/io/NewickConverter.cpp
#${REVBAYES_DIR}/core/io/TaxonDateReader.cpp
#${REVBAYES_DIR}/core/io/UserInterface.cpp
${REVBAYES_DIR}/core/io/TaxonReader.cpp
${REVBAYES_DIR}/core/io/DelimitedDataReader.h
#${REVBAYES_DIR}/core/io/NexusWriter.h
#${REVBAYES_DIR}/core/io/PopulationDataReader.cpp
${REVBAYES_DIR}/core/io/UserInterface.h
${REVBAYES_DIR}/core/io/DelimitedDataReader.cpp
${REVBAYES_DIR}/core/io/RbErrorStream.cpp
#${REVBAYES_DIR}/core/io/ContinuousTraitDataReader.h
${REVBAYES_DIR}/core/io/NclReader.h
${REVBAYES_DIR}/core/io/FastaWriter.h
${REVBAYES_DIR}/core/io/TaxonDateReader.h
${REVBAYES_DIR}/core/io/NewickConverter.h
#${REVBAYES_DIR}/core/io/NexusWriter.cpp
#${REVBAYES_DIR}/core/io/ContinuousTraitDataReader.cpp
${REVBAYES_DIR}/core/phylogenetics
#${REVBAYES_DIR}/core/phylogenetics/GtrRateMatrix.h
#${REVBAYES_DIR}/core/phylogenetics/GtrRateMatrix.cpp
${REVBAYES_DIR}/core/moves
${REVBAYES_DIR}/core/moves/ScaleProposal.h
${REVBAYES_DIR}/core/moves/mixture
${REVBAYES_DIR}/core/moves/mixture/DPPScaleCatValsMove.h
${REVBAYES_DIR}/core/moves/mixture/DPPGibbsConcentrationMove.h
${REVBAYES_DIR}/core/moves/mixture/DPPScaleCatValsMove.cpp
${REVBAYES_DIR}/core/moves/mixture/DPPAllocateAuxGibbsMove.h
${REVBAYES_DIR}/core/moves/mixture/MixtureAllocationMove.h
${REVBAYES_DIR}/core/moves/SequenctialMoveSchedule.h
${REVBAYES_DIR}/core/moves/MoveSchedule.cpp
#${REVBAYES_DIR}/core/moves/MetropolisHastingsMove.h
#${REVBAYES_DIR}/core/moves/PseudoGibbsMetaMove.cpp
${REVBAYES_DIR}/core/moves/SingleRandomMoveSchedule.cpp
#${REVBAYES_DIR}/core/moves/CompoundableMove.cpp
#${REVBAYES_DIR}/core/moves/CompoundableMove.h
${REVBAYES_DIR}/core/moves/AbstractMove.h
${REVBAYES_DIR}/core/moves/Move.h
${REVBAYES_DIR}/core/moves/AbstractMove.cpp
${REVBAYES_DIR}/core/moves/SequenctialMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/MoveSchedule.h
#${REVBAYES_DIR}/core/moves/ScaleProposal.cpp
#${REVBAYES_DIR}/core/moves/MetropolisHastingsMove.cpp
${REVBAYES_DIR}/core/moves/Move.cpp
${REVBAYES_DIR}/core/moves/compound
#${REVBAYES_DIR}/core/moves/compound/CompoundMove.cpp
#${REVBAYES_DIR}/core/moves/compound/RateAgeBetaShift.cpp
#${REVBAYES_DIR}/core/moves/compound/CompoundMove.h
#${REVBAYES_DIR}/core/moves/compound/RateAgeBetaShift.h
#${REVBAYES_DIR}/core/moves/PseudoGibbsMetaMove.h
${REVBAYES_DIR}/core/moves/RandomMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/Proposal.h
${REVBAYES_DIR}/core/moves/RandomMoveSchedule.h
${REVBAYES_DIR}/core/moves/TreePoposal.h
${REVBAYES_DIR}/core/moves/simple
#${REVBAYES_DIR}/core/moves/simple/VectorScaleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/RandomIntegerWalkMove.cpp
#${REVBAYES_DIR}/core/moves/simple/PrecisionMatrixSimpleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/SlidingMove.cpp
#${REVBAYES_DIR}/core/moves/simple/VectorSingleElementScaleMove.h
#${REVBAYES_DIR}/core/moves/simple/RlcRateScaleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/VectorScaleMove.h
#${REVBAYES_DIR}/core/moves/simple/VectorSingleElementScaleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/SwitchRateJumpMove.cpp
#${REVBAYES_DIR}/core/moves/simple/PathValueScalingMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimpleMove.h
#${REVBAYES_DIR}/core/moves/simple/PrecisionMatrixSimpleMove.h
#${REVBAYES_DIR}/core/moves/simple/SingleElementScaleMove.h
#${REVBAYES_DIR}/core/moves/simple/CompletePathRescaleMove.h
#${REVBAYES_DIR}/core/moves/simple/CompletePathRescaleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/SwitchRateJumpMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexSingleElementScale.h
#${REVBAYES_DIR}/core/moves/simple/SlidingMove.h
#${REVBAYES_DIR}/core/moves/simple/PathValueScalingMove.h
${REVBAYES_DIR}/core/moves/simple/SubtreePruneRegraft.h
${REVBAYES_DIR}/core/moves/simple/SubtreePruneRegraft.cpp
#${REVBAYES_DIR}/core/moves/simple/VectorSingleElementSlidingMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexMove.cpp
${REVBAYES_DIR}/core/moves/simple/ScaleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/PathResampleMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimpleMove.cpp
${REVBAYES_DIR}/core/moves/simple/ScaleMove.h
${REVBAYES_DIR}/core/moves/simple/BetaSimplexMove.h
#${REVBAYES_DIR}/core/moves/simple/VectorSingleElementSlidingMove.cpp
${REVBAYES_DIR}/core/moves/simple/BetaSimplexMove.cpp
#${REVBAYES_DIR}/core/moves/simple/RlcRateScaleMove.h
#${REVBAYES_DIR}/core/moves/simple/PathResampleMove.h
#${REVBAYES_DIR}/core/moves/simple/SingleElementScaleMove.cpp
#${REVBAYES_DIR}/core/moves/simple/RandomGeometricWalkMove.h
#${REVBAYES_DIR}/core/moves/simple/RandomGeometricWalkMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimplexSingleElementScale.cpp
#${REVBAYES_DIR}/core/moves/simple/RandomIntegerWalkMove.h
${REVBAYES_DIR}/core/moves/SingleRandomMoveSchedule.h
#${REVBAYES_DIR}/core/moves/trees
#${REVBAYES_DIR}/core/moves/trees/nodeage
#${REVBAYES_DIR}/core/moves/trees/nodeage/TreeScale.h
#${REVBAYES_DIR}/core/moves/trees/nodeage/NodeTimeSlideUniform.h
#${REVBAYES_DIR}/core/moves/trees/nodeage/SubtreeScale.cpp
#${REVBAYES_DIR}/core/moves/trees/nodeage/RootTimeSlide.cpp
#${REVBAYES_DIR}/core/moves/trees/nodeage/RootTimeSlide.h
#${REVBAYES_DIR}/core/moves/trees/nodeage/NodeTimeSlideBeta.h
#${REVBAYES_DIR}/core/moves/trees/nodeage/SubtreeScale.h
#${REVBAYES_DIR}/core/moves/trees/nodeage/TreeScale.cpp
#${REVBAYES_DIR}/core/moves/trees/nodeage/WeightedNodeTimeSlide.cpp
#${REVBAYES_DIR}/core/moves/trees/nodeage/NodeTimeSlideBeta.cpp
#${REVBAYES_DIR}/core/moves/trees/nodeage/NodeTimeSlideUniform.cpp
#${REVBAYES_DIR}/core/moves/trees/nodeage/WeightedNodeTimeSlide.h
#${REVBAYES_DIR}/core/moves/trees/compound
#${REVBAYES_DIR}/core/moves/trees/compound/NearestNeighborInterchange_nonClock.cpp
#${REVBAYES_DIR}/core/moves/trees/compound/NearestNeighborInterchange_nonClock.h
#${REVBAYES_DIR}/core/moves/trees/compound/NearestNeighborInterchange.cpp
#${REVBAYES_DIR}/core/moves/trees/compound/NearestNeighborInterchange.h
#${REVBAYES_DIR}/core/moves/trees/topology
#${REVBAYES_DIR}/core/moves/trees/topology/NarrowExchange.h
#${REVBAYES_DIR}/core/moves/trees/topology/NarrowExchange.cpp
#${REVBAYES_DIR}/core/moves/trees/topology/FixedNodeheightPruneRegraft.h
#${REVBAYES_DIR}/core/moves/trees/topology/GibbsPruneAndRegraft.cpp
#${REVBAYES_DIR}/core/moves/trees/topology/FixedNodeheightPruneRegraft.cpp
#${REVBAYES_DIR}/core/moves/trees/topology/GibbsPruneAndRegraft.h
${REVBAYES_DIR}/core/ncl
${REVBAYES_DIR}/core/ncl/nxsexception.cpp
${REVBAYES_DIR}/core/ncl/nxsreader.h
${REVBAYES_DIR}/core/ncl/nxsunalignedblock.h
${REVBAYES_DIR}/core/ncl/nxsstring.h
${REVBAYES_DIR}/core/ncl/nxsblock.cpp
${REVBAYES_DIR}/core/ncl/nxscharactersblock.h
${REVBAYES_DIR}/core/ncl/nxsmultiformat.cpp
${REVBAYES_DIR}/core/ncl/nxsblock.h
${REVBAYES_DIR}/core/ncl/nxstoken.cpp
${REVBAYES_DIR}/core/ncl/nxsutilcopy.h
${REVBAYES_DIR}/core/ncl/nxstaxaassociationblock.cpp
${REVBAYES_DIR}/core/ncl/nxsdistancesblock.h
${REVBAYES_DIR}/core/ncl/nxscdiscretematrix.h
${REVBAYES_DIR}/core/ncl/nxstaxaassociationblock.h
${REVBAYES_DIR}/core/ncl/nxsexception.h
${REVBAYES_DIR}/core/ncl/nxscharactersblock.cpp
${REVBAYES_DIR}/core/ncl/nxspublicblocks.cpp
${REVBAYES_DIR}/core/ncl/nxsallocatematrix.h
${REVBAYES_DIR}/core/ncl/nxsstring.cpp
${REVBAYES_DIR}/core/ncl/nxsunalignedblock.cpp
${REVBAYES_DIR}/core/ncl/nxstreesblock.cpp
${REVBAYES_DIR}/core/ncl/nxsdatablock.cpp
${REVBAYES_DIR}/core/ncl/nxscxxdiscretematrix.cpp
${REVBAYES_DIR}/core/ncl/nxsdatablock.h
${REVBAYES_DIR}/core/ncl/nxstaxablock.h
${REVBAYES_DIR}/core/ncl/ncl.h
${REVBAYES_DIR}/core/ncl/nxsassumptionsblock.h
${REVBAYES_DIR}/core/ncl/nxsdiscretedatum.h
${REVBAYES_DIR}/core/ncl/nxscxxdiscretematrix.h
${REVBAYES_DIR}/core/ncl/nxsdefs.h
${REVBAYES_DIR}/core/ncl/nxsmultiformat.h
${REVBAYES_DIR}/core/ncl/nxssetreader.h
${REVBAYES_DIR}/core/ncl/nxstaxablock.cpp
${REVBAYES_DIR}/core/ncl/nxssetreader.cpp
${REVBAYES_DIR}/core/ncl/nxsreader.cpp
${REVBAYES_DIR}/core/ncl/nxspublicblocks.h
${REVBAYES_DIR}/core/ncl/nxsdistancedatum.h
${REVBAYES_DIR}/core/ncl/nxstreesblock.h
${REVBAYES_DIR}/core/ncl/nxsassumptionsblock.cpp
${REVBAYES_DIR}/core/ncl/nxstoken.h
${REVBAYES_DIR}/core/ncl/nxsdistancesblock.cpp
${REVBAYES_DIR}/core/functions
${REVBAYES_DIR}/core/functions/discrete
${REVBAYES_DIR}/core/functions/discrete/ConstantFunction.h
${REVBAYES_DIR}/core/functions/discrete/DiscreteFunction.h
${REVBAYES_DIR}/core/functions/discrete/univariate
#${REVBAYES_DIR}/core/functions/discrete/univariate/ConstantStepFunction.cpp
#${REVBAYES_DIR}/core/functions/discrete/univariate/LinearStepFunction.cpp
#${REVBAYES_DIR}/core/functions/discrete/univariate/ConstantStepFunction.h
#${REVBAYES_DIR}/core/functions/discrete/univariate/StepFunction.h
#${REVBAYES_DIR}/core/functions/discrete/univariate/LinearStepFunction.h
#${REVBAYES_DIR}/core/functions/discrete/univariate/StepFunction.cpp
#${REVBAYES_DIR}/core/functions/PowermixFunction.cpp
#${REVBAYES_DIR}/core/functions/TypedReferenceFunction.h
#${REVBAYES_DIR}/core/functions/SimplexScaleFunction.cpp
${REVBAYES_DIR}/core/functions/builtin
#${REVBAYES_DIR}/core/functions/builtin/GreaterEqualFunction.h
#${REVBAYES_DIR}/core/functions/builtin/LogicalOrFunction.cpp
#${REVBAYES_DIR}/core/functions/builtin/LogicalUnotFunction.cpp
#${REVBAYES_DIR}/core/functions/builtin/NotEqualFunction.h
#${REVBAYES_DIR}/core/functions/builtin/LessThanFunction.h
${REVBAYES_DIR}/core/functions/builtin/MeanFunction.cpp
#${REVBAYES_DIR}/core/functions/builtin/GreaterThanFunction.h
${REVBAYES_DIR}/core/functions/builtin/NormalizeVectorFunction.cpp
#${REVBAYES_DIR}/core/functions/builtin/LogicalAndFunction.cpp
#${REVBAYES_DIR}/core/functions/builtin/LogicalOrFunction.h
#${REVBAYES_DIR}/core/functions/builtin/LogicalAndFunction.h
#${REVBAYES_DIR}/core/functions/builtin/LogicalUnotFunction.h
#${REVBAYES_DIR}/core/functions/builtin/EquationFunction.h
${REVBAYES_DIR}/core/functions/builtin/MeanFunction.h
${REVBAYES_DIR}/core/functions/builtin/NormalizeVectorFunction.h
#${REVBAYES_DIR}/core/functions/builtin/LessEqualFunction.h
#${REVBAYES_DIR}/core/functions/PowermixFunction.h
${REVBAYES_DIR}/core/functions/Function.cpp
${REVBAYES_DIR}/core/functions/distribution
${REVBAYES_DIR}/core/functions/distribution/QuantileFunction.h
#${REVBAYES_DIR}/core/functions/distribution/CummulativeDistributionFunction.cpp
${REVBAYES_DIR}/core/functions/distribution/QuantileFunction.cpp
#${REVBAYES_DIR}/core/functions/distribution/CummulativeDistributionFunction.h
#${REVBAYES_DIR}/core/functions/distribution/DistributionConstructorFunction.h
#${REVBAYES_DIR}/core/functions/distribution/ProbabilityDensityFunction.h
${REVBAYES_DIR}/core/functions/continuous
#${REVBAYES_DIR}/core/functions/continuous/IntegralFunction.h
#${REVBAYES_DIR}/core/functions/continuous/IntegralFunction.cpp
${REVBAYES_DIR}/core/functions/continuous/bivariate
#${REVBAYES_DIR}/core/functions/continuous/bivariate/PowerFunction.cpp
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryDivision.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryAddition.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinarySubtraction.h
#${REVBAYES_DIR}/core/functions/continuous/bivariate/PowerFunction.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryMultiplication.h
${REVBAYES_DIR}/core/functions/continuous/ContinuousFunction.cpp
${REVBAYES_DIR}/core/functions/continuous/univariate
#${REVBAYES_DIR}/core/functions/continuous/univariate/GeneralUnivariateFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/GeneralUnivariateFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/UnaryMinus.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/FloorFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/LogFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/SqrtFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/ExponentialFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/RoundFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/SqrtFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/IntegrableFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/AbsoluteValueFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/CeilFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/ExponentialFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/UnivariateFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/AbsoluteValueFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/TruncateFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/LnFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/LogFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/RoundFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/FloorFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/TruncateFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/LnFunction.cpp
#${REVBAYES_DIR}/core/functions/continuous/univariate/CeilFunction.h
#${REVBAYES_DIR}/core/functions/continuous/univariate/UnivariateFunction.cpp
${REVBAYES_DIR}/core/functions/continuous/ContinuousFunction.h
${REVBAYES_DIR}/core/functions/phylogenetics
${REVBAYES_DIR}/core/functions/phylogenetics/FreeBinaryRateMatrixFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/NucleotideFrequenciesFromGcContentFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/NucleotideFrequenciesFromGcContentFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/GtrRateMatrixFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/RateMultiplierPhyloFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/BiogeographyRateMapFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/ExponentialBranchTree.h
#${REVBAYES_DIR}/core/functions/phylogenetics/ExponentialBranchTree.cpp
${REVBAYES_DIR}/core/functions/phylogenetics/TreeAssemblyFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/BiogeographyRateMapFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/JcRateMatrixFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/CoalaFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/HkyRateMatrixFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/Tamura92RateMatrixFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/CoalaFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/F81RateMatrixFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/JcRateMatrixFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/RateMultiplierPhyloFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/Tamura92RateMatrixFunction.cpp
${REVBAYES_DIR}/core/functions/phylogenetics/FreeBinaryRateMatrixFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/GtrRateMatrixFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/MrcaFunction.h
#${REVBAYES_DIR}/core/functions/phylogenetics/F81RateMatrixFunction.cpp
#${REVBAYES_DIR}/core/functions/phylogenetics/HkyRateMatrixFunction.cpp
${REVBAYES_DIR}/core/functions/phylogenetics/TreeAssemblyFunction.cpp
${REVBAYES_DIR}/core/functions/TypedFunction.h
#${REVBAYES_DIR}/core/functions/SimplexScaleFunction.h
${REVBAYES_DIR}/core/functions/Function.h
#${REVBAYES_DIR}/core/functions/DistanceDependentDispersalFunction.h
#${REVBAYES_DIR}/core/functions/DistanceDependentDispersalFunction.cpp
${REVBAYES_DIR}/core/functions/SimplexFunction.cpp
${REVBAYES_DIR}/core/functions/VectorFunction.h
${REVBAYES_DIR}/core/functions/RbVectorFunction.h
${REVBAYES_DIR}/core/functions/VectorIndexOperator.h
#${REVBAYES_DIR}/core/functions/SimplexFunction.h
${REVBAYES_DIR}/core/utils
${REVBAYES_DIR}/core/utils/RbFileManager.cpp
${REVBAYES_DIR}/core/utils/RbFileManager.h
${REVBAYES_DIR}/core/utils/RbConstants.h
${REVBAYES_DIR}/core/utils/RbOptions.h
${REVBAYES_DIR}/core/utils/RbSettings.h
${REVBAYES_DIR}/core/utils/RbException.h
${REVBAYES_DIR}/core/utils/StringUtilities.h
${REVBAYES_DIR}/core/utils/RbException.cpp
${REVBAYES_DIR}/core/utils/StringUtilities.cpp
${REVBAYES_DIR}/core/utils/TreeUtilities.cpp
${REVBAYES_DIR}/core/utils/RbUtil.cpp
${REVBAYES_DIR}/core/utils/RbUtil.h
${REVBAYES_DIR}/core/utils/RbSettings.cpp
${REVBAYES_DIR}/core/utils/TreeUtilities.h
${REVBAYES_DIR}/core/utils/IsDerivedFrom.h
${REVBAYES_DIR}/core/dag
${REVBAYES_DIR}/core/dag/DynamicNode.h
${REVBAYES_DIR}/core/dag/TypedDagNode.h
${REVBAYES_DIR}/core/dag/DagNode.h
${REVBAYES_DIR}/core/dag/DagNode.cpp
${REVBAYES_DIR}/core/dag/StochasticNodes
${REVBAYES_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.cpp
${REVBAYES_DIR}/core/dag/StochasticNodes/StochasticNode.h
${REVBAYES_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.h
${REVBAYES_DIR}/core/dag/ConstantNode.h
${REVBAYES_DIR}/core/dag/DeterministicNodes
${REVBAYES_DIR}/core/dag/DeterministicNodes/DeterministicNode.h
${REVBAYES_DIR}/core/statistics
${REVBAYES_DIR}/core/statistics/mixture
#${REVBAYES_DIR}/core/statistics/mixture/MeanVecContinuousValStatistic.cpp
#${REVBAYES_DIR}/core/statistics/mixture/MeanVecContinuousValStatistic.h
${REVBAYES_DIR}/core/statistics/mixture/DppNumTablesStatistic.h
${REVBAYES_DIR}/core/statistics/tree
#${REVBAYES_DIR}/core/statistics/tree/TreeHeightStatistic.h
#${REVBAYES_DIR}/core/statistics/tree/DeathRateConstBDStatistic.h
#${REVBAYES_DIR}/core/statistics/tree/TmrcaStatistic.h
#${REVBAYES_DIR}/core/statistics/tree/TreeHeightStatistic.cpp
#${REVBAYES_DIR}/core/statistics/tree/BirthRateConstBDStatistic.cpp
#${REVBAYES_DIR}/core/statistics/tree/TmrcaStatistic.cpp
${REVBAYES_DIR}/core/statistics/tree/TreeLengthStatistic.h
#${REVBAYES_DIR}/core/statistics/tree/BirthRateConstBDStatistic.h
#${REVBAYES_DIR}/core/statistics/tree/DeathRateConstBDStatistic.cpp
${REVBAYES_DIR}/core/datatypes
${REVBAYES_DIR}/core/datatypes/math
${REVBAYES_DIR}/core/datatypes/math/MatrixReal.cpp
${REVBAYES_DIR}/core/datatypes/math/TransitionProbabilityMatrix.h
#${REVBAYES_DIR}/core/datatypes/math/DualityDiagram.h
#${REVBAYES_DIR}/core/datatypes/math/PrecisionMatrix.cpp
#${REVBAYES_DIR}/core/datatypes/math/DualityDiagram.cpp
#${REVBAYES_DIR}/core/datatypes/math/PrecisionMatrix.h
${REVBAYES_DIR}/core/datatypes/math/MatrixReal.h
${REVBAYES_DIR}/core/datatypes/math/MatrixComplex.cpp
${REVBAYES_DIR}/core/datatypes/math/TransitionProbabilityMatrix.cpp
${REVBAYES_DIR}/core/datatypes/math/MatrixComplex.h
${REVBAYES_DIR}/core/datatypes/math/CorrespondenceAnalysis.h
#${REVBAYES_DIR}/core/datatypes/math/CorrespondenceAnalysis.cpp
${REVBAYES_DIR}/core/datatypes/RbIterator.h
${REVBAYES_DIR}/core/datatypes/TraitData.h
${REVBAYES_DIR}/core/datatypes/Cloner.h
${REVBAYES_DIR}/core/datatypes/character
${REVBAYES_DIR}/core/datatypes/character/DiscreteCharacterState.h
${REVBAYES_DIR}/core/datatypes/character/AminoAcidState.h
${REVBAYES_DIR}/core/datatypes/character/CharacterState.cpp
${REVBAYES_DIR}/core/datatypes/character/DnaState.h
${REVBAYES_DIR}/core/datatypes/character/ContinuousCharacterState.cpp
${REVBAYES_DIR}/core/datatypes/character/DnaState.cpp
${REVBAYES_DIR}/core/datatypes/character/ContinuousCharacterState.h
${REVBAYES_DIR}/core/datatypes/character/StandardState.cpp
${REVBAYES_DIR}/core/datatypes/character/RnaState.h
${REVBAYES_DIR}/core/datatypes/character/RnaState.cpp
${REVBAYES_DIR}/core/datatypes/character/CharacterState.h
${REVBAYES_DIR}/core/datatypes/character/AminoAcidState.cpp
${REVBAYES_DIR}/core/datatypes/character/StandardState.h
${REVBAYES_DIR}/core/datatypes/phylogenetics
#${REVBAYES_DIR}/core/datatypes/phylogenetics/DistanceMatrix.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/SnpData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/DiscreteCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteTaxonData.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/MicrosatData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/DiscreteTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/TimeReversibleRateMatrix.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Vt.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Jones.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Jones.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_RtRev.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/TimeReversibleRateMatrix.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_CpRev.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_F81.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_JC.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Blosum62.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_LG.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_F81.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/GeneralRateMatrix.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtMam.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_FreeBinary.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_HKY.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtRev24.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtRev24.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_LG.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_RtRev.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Empirical.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Wag.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Blosum62.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Dayhoff.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_MtMam.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_JC.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Vt.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Wag.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/GeneralRateMatrix.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Empirical.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_Dayhoff.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_GTR.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_GTR.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_CpRev.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_FreeBinary.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_HKY.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/TimeAndDate.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousTaxonData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/Taxon.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/DistanceMatrix.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/TimeAndDate.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/Taxon.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteTaxonData.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/MicrosatData.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/SnpData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap/RateMap_Biogeography.h
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap/RateMap.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap/RateMap_Biogeography.cpp
#${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap/RateMap.h
${REVBAYES_DIR}/core/datatypes/Cloneable.h
${REVBAYES_DIR}/core/datatypes/TraitData.cpp
${REVBAYES_DIR}/core/datatypes/RbConstIterator.h
${REVBAYES_DIR}/core/datatypes/RbVector.h
${REVBAYES_DIR}/core/datatypes/trees
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventHandler.h
${REVBAYES_DIR}/core/datatypes/trees/Topology.cpp
${REVBAYES_DIR}/core/datatypes/trees/BranchLengthTree.cpp
${REVBAYES_DIR}/core/datatypes/trees/ConditionalClade.cpp
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventListener.h
${REVBAYES_DIR}/core/datatypes/trees/Clade.h
#${REVBAYES_DIR}/core/datatypes/trees/ConditionalCladeProbabilityDistribution.cpp
${REVBAYES_DIR}/core/datatypes/trees/TimeTree.cpp
#${REVBAYES_DIR}/core/datatypes/trees/ConditionalCladeProbabilityDistribution.h
${REVBAYES_DIR}/core/datatypes/trees/Tree.cpp
${REVBAYES_DIR}/core/datatypes/trees/Topology.h
${REVBAYES_DIR}/core/datatypes/trees/ConditionalClade.h
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventHandler.cpp
${REVBAYES_DIR}/core/datatypes/trees/Clade.cpp
${REVBAYES_DIR}/core/datatypes/trees/BranchLengthTree.h
${REVBAYES_DIR}/core/datatypes/trees/TopologyNode.cpp
${REVBAYES_DIR}/core/datatypes/trees/Tree.h
${REVBAYES_DIR}/core/datatypes/trees/TopologyNode.h
${REVBAYES_DIR}/core/datatypes/trees/TimeTree.h
${REVBAYES_DIR}/core/analysis
${REVBAYES_DIR}/core/analysis/mcmc
${REVBAYES_DIR}/core/analysis/mcmc/output
#${REVBAYES_DIR}/core/analysis/mcmc/output/Trace.cpp
${REVBAYES_DIR}/core/analysis/mcmc/output/TraceAnalysisContinuous.h
${REVBAYES_DIR}/core/analysis/mcmc/output/Sample.h
${REVBAYES_DIR}/core/analysis/mcmc/output/TreeTrace.h
${REVBAYES_DIR}/core/analysis/mcmc/output/TreeSummary.h
#${REVBAYES_DIR}/core/analysis/mcmc/output/TraceAnalysisContinuous.cpp
#${REVBAYES_DIR}/core/analysis/mcmc/output/Trace.h
${REVBAYES_DIR}/core/analysis/mcmc/Mcmc.cpp
#${REVBAYES_DIR}/core/analysis/mcmc/convergence
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/HeidelbergerWelchTest.h
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/ConvergenceDiagnosticContinuous.h
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/HeidelbergerWelchTest.cpp
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/ConvergenceDiagnosticContinuous.cpp
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/GewekeTest.h
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/GelmanRubinTest.cpp
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/GelmanRubinTest.h
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/StationarityTest.cpp
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/StationarityTest.h
#${REVBAYES_DIR}/core/analysis/mcmc/convergence/GewekeTest.cpp
${REVBAYES_DIR}/core/analysis/mcmc/ParallelMcmcmc.cpp
${REVBAYES_DIR}/core/analysis/mcmc/Mcmc.h
${REVBAYES_DIR}/core/analysis/mcmc/ParallelMcmcmc.h
${REVBAYES_DIR}/core/analysis/Model.h
${REVBAYES_DIR}/core/analysis/Model.cpp
${REVBAYES_DIR}/core/distributions
${REVBAYES_DIR}/core/distributions/math
#${REVBAYES_DIR}/core/distributions/math/RandomWalkProcess.h
#${REVBAYES_DIR}/core/distributions/math/GeometricBrownianMotion.h
${REVBAYES_DIR}/core/distributions/math/ContinuousDistribution.h
#${REVBAYES_DIR}/core/distributions/math/MultinomialDistribution.h
#${REVBAYES_DIR}/core/distributions/math/GeometricDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/OneOverXDistribution.h
#${REVBAYES_DIR}/core/distributions/math/MultivariateNormalDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/DirichletDistribution.h
#${REVBAYES_DIR}/core/distributions/math/BimodalLognormalDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/LognormalDistribution.h
#${REVBAYES_DIR}/core/distributions/math/Skyline.cpp
#${REVBAYES_DIR}/core/distributions/math/GeometricDistribution.h
#${REVBAYES_DIR}/core/distributions/math/MultivariateNormalDistribution.h
#${REVBAYES_DIR}/core/distributions/math/NormalDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/GeometricBrownianMotion.cpp
${REVBAYES_DIR}/core/distributions/math/ContinuousDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/BinomialDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/BimodalNormalDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/GammaDistribution.h
${REVBAYES_DIR}/core/distributions/math/UniformDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/WishartDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/UniformDistribution.h
#${REVBAYES_DIR}/core/distributions/math/BimodalNormalDistribution.h
${REVBAYES_DIR}/core/distributions/math/ExponentialDistribution.h
${REVBAYES_DIR}/core/distributions/math/DirichletDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/WishartDistribution.h
#${REVBAYES_DIR}/core/distributions/math/Skyline.h
#${REVBAYES_DIR}/core/distributions/math/InverseGammaDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/ExponentialDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/BimodalLognormalDistribution.h
#${REVBAYES_DIR}/core/distributions/math/RandomWalkProcess.cpp
#${REVBAYES_DIR}/core/distributions/math/BinomialDistribution.h
#${REVBAYES_DIR}/core/distributions/math/NormalDistribution.h
#${REVBAYES_DIR}/core/distributions/math/PoissonDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/BernoulliDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/PoissonDistribution.h
#${REVBAYES_DIR}/core/distributions/math/OneOverXDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/GammaDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/BernoulliDistribution.h
#${REVBAYES_DIR}/core/distributions/math/BrownianMotion.cpp
${REVBAYES_DIR}/core/distributions/math/BetaDistribution.h
#${REVBAYES_DIR}/core/distributions/math/BrownianMotion.h
#${REVBAYES_DIR}/core/distributions/math/InverseGammaDistribution.h
#${REVBAYES_DIR}/core/distributions/math/LognormalDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/BetaDistribution.cpp
#${REVBAYES_DIR}/core/distributions/math/MultinomialDistribution.cpp
${REVBAYES_DIR}/core/distributions/Distribution.h
${REVBAYES_DIR}/core/distributions/Distribution.cpp
${REVBAYES_DIR}/core/distributions/phylogenetics
${REVBAYES_DIR}/core/distributions/phylogenetics/LengthTree.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/WhiteNoisePhyloProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/BranchRateJumpProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/AutocorrelatedBranchMatrixDistribution.h
${REVBAYES_DIR}/core/distributions/phylogenetics/tree
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/ConstantPopulationCoalescent.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/UniformBranchLengthTreeDistribution.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/BirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/ConstantRateBirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/PiecewiseConstantFossilizedBirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/PiecewiseConstantFossilizedBirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/BirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/ConstantRateSerialSampledBirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/ConstantRateBirthDeathMassExtinction.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/AbstractBirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/ConstantRateBirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/PiecewiseConstantSerialSampledBirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/ConstantRateBirthDeathMassExtinction.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/DiversityDependentPureBirthProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/DiversityDependentPureBirthProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/AbstractBirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/PiecewiseConstantSerialSampledBirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/birthdeath/ConstantRateSerialSampledBirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/UniformTopologyDistribution.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/UniformTimeTreeDistribution.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/MultispeciesCoalescent.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/TimeDependentBirthDeathProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/ConstantPopulationCoalescent.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/UniformBranchLengthTreeDistribution.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/UniformTimeTreeDistribution.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/TimeDependentBirthDeathProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/MultispeciesCoalescent.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/tree/UniformTopologyDistribution.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/AutocorrelatedBranchMatrixDistribution.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/LengthTree.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/BranchRateJumpProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/WhiteNoisePhyloProcess.cpp
${REVBAYES_DIR}/core/distributions/phylogenetics/substitution
${REVBAYES_DIR}/core/distributions/phylogenetics/substitution/GeneralBranchHeterogeneousCharEvoModel.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/substitution/NucleotideBranchHeterogeneousCharEvoModel.h
${REVBAYES_DIR}/core/distributions/phylogenetics/substitution/AbstractSiteHomogeneousMixtureCharEvoModel.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/BrownianPhyloProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/AutocorrelatedLognormalRateDistribution.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/AutocorrelatedLognormalRateDistribution.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/MultivariateBrownianPhyloProcess.cpp
#${REVBAYES_DIR}/core/distributions/phylogenetics/MultivariateBrownianPhyloProcess.h
#${REVBAYES_DIR}/core/distributions/phylogenetics/BrownianPhyloProcess.h
${REVBAYES_DIR}/core/distributions/MixtureDistribution.h
${REVBAYES_DIR}/core/distributions/TypedDistribution.h
${REVBAYES_DIR}/core/distributions/DirichletProcessPriorDistribution.h
#${REVBAYES_DIR}/core/distributions/RbMixtureDistribution.h
)
add_library(rb-core ${CORE_FILES})
